app = executable (app_name,
             app_src,
             c_args         : app_cflags,
             dependencies   : app_dep,
             build_rpath    : libs_rpath,
             install_rpath  : libs_rpath,
             include_directories: app_inc,
             install        : true,
             install_dir    : install_path_app)
